# claude-reliability

./: .capabilities.json  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  REFERENCES.md  REVIEWGUIDE.md  clippy.toml  justfile  rustfmt.toml
.beads/: .gitignore  issues.jsonl  sync_base.jsonl
.cargo/: config.toml
.claude/: mcp.json  reliability-config.yaml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/scripts/: ensure-local-binary.sh  run-tasks-mcp.sh
.claude-plugin/skills/: create-tasks.md  figure-out-what-to-work-on.md  fix-failing-github-build.md  gather-requirements.md  get-to-100-coverage.md  write-how-tos.md
.claude/commands/: cancel-just-keep-working.md  ideate.md  just-keep-working.md
.claude/scripts/: autonomous-stop-hook.py  code-review-hook.py  ensure-local-binary.sh  jkw-stop-hook.py  startup-hook.py
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  post-create.sh
.githooks/: check-hook-edits.sh  pre-commit  pre-pull-rebase.sh
commands/: autonomous-mode.md  cancel-just-keep-working.md  checkpoint.md  create-tasks.md  figure-out-what-to-work-on.md  fix-failing-github-build.md  gather-requirements.md  get-to-100-coverage.md  ideate.md  just-keep-working.md  quality-check.md  self-review.md  write-how-tos.md
docs/: stop-hook-states.dot
hooks/: hooks.json
notes/: claude-file-tools.md  transcript-format.md
scripts/: check-coverage.py  check-templates.py  code-review-hook.sh  create-test-issues-batch.sh  ensure-binary.sh  find-global-state-tests.py  install.sh  mcp-schema.sh  no-verify-hook.sh  release.py  run-tasks-mcp.sh  stop-hook.sh  test-mcp-plugin.sh
snapshot-tests/: .gitignore  SNAPSHOT_TESTING.md  pyproject.toml  run-snapshots.sh
snapshot-tests/basic-stop-hook/: setup.sh  story.md  transcript.md
snapshot-tests/fake-claude/: claude
snapshot-tests/problem-mode/: setup.sh  story.md  transcript.md
snapshot-tests/snapshot_tests/: __init__.py  commit_tracker.py  compile_transcript.py  fake_claude.py  placeholder.py  plugin_setup.py  pty_runner.py  run_snapshots.py  simulator.py  transcript.py
snapshot-tests/snapshot_tests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
snapshot-tests/tests/basic-stop-hook/: setup.py  transcript.jsonl  transcript.md
snapshot-tests/tests/coverage-test-fix/: directory-snapshot.json  post-condition-output.txt  post-condition.py  setup.py  story.md  transcript.jsonl  transcript.md
snapshot-tests/tests/hello-world-script/: directory-snapshot.json  post-condition-output.txt  post-condition.py  setup.py  story.md  transcript.jsonl  transcript.md
snapshot-tests/tests/problem-mode/: setup.py  transcript.jsonl  transcript.md
snapshot-tests/tests/python-to-rust-port/: directory-snapshot.json  post-condition-output.txt  post-condition.py  setup.py  story.md  transcript.jsonl  transcript.md
snapshot-tests/tests/stop-hook-fast-path-clean/: directory-snapshot.json  post-condition-output.txt  post-condition.py  setup.py  story.md  transcript.jsonl  transcript.md
snapshot-tests/tests/stop-hook-reflection-first-stop/: directory-snapshot.json  post-condition-output.txt  post-condition.py  setup.py  story.md  transcript.jsonl  transcript.md
snapshot-tests/tests/stop-hook-reflection-second-stop/: directory-snapshot.json  post-condition-output.txt  post-condition.py  setup.py  story.md  transcript.jsonl  transcript.md
snapshot-tests/tests/stop-hook-uncommitted-changes/: directory-snapshot.json  post-condition-output.txt  post-condition.py  setup.py  story.md  transcript.jsonl  transcript.md
snapshot-tests/tests/unpushed-commits/: setup.py  transcript.jsonl  transcript.md
snapshot-tests/unpushed-commits/: setup.sh  story.md  transcript.md
src/: beads.rs  beads_sync.rs  cli.rs  command.rs  config.rs  error.rs  hook_logging.rs  lib.rs  main.rs  mcp_health.rs  mcp_logging.rs  paths.rs  question.rs  reflection.rs  reminders.rs  session.rs  single_work_item.rs  storage.rs  subagent.rs  subagent_logging.rs  templates.rs  testing.rs  traits.rs  transcript.rs
src/cli/: howto.rs  (+5 more)
tests/: integration_test.rs
(+112 files in other folders)
