[package]
name = "claude-reliability"
version = "26.201.0"
edition = "2021"
rust-version = "1.75"
description = "A plugin for Claude to improve its reliability through testing infrastructure"
license = "MIT"

[lib]
name = "claude_reliability"
path = "src/lib.rs"

[[bin]]
name = "claude-reliability"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "bulk-tasks"
path = "src/bin/bulk_tasks.rs"

[features]
default = []
cli = ["dep:clap"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
clap = { version = "4", features = ["derive"], optional = true }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tera = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
proptest = "1"
serial_test = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Specific allows
module_name_repetitions = "allow"
must_use_candidate = "allow"
